--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,8 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-3-3>>
+* <<rn-8-3-2>>
 * <<rn-8-3-1>>
 * <<rn-8-3-0>>
 * <<rn-8-2-3>>
@@ -11,6 +13,21 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-3-3]]
+=== 8.3.3 (2022-08-01)
+
+* Client is compatible with Elasticsearch 8.3.3
+
+[discrete]
+[[rn-8-3-2]]
+=== 8.3.2 (2022-08-01)
+
+[discrete]
+==== Security
+
+* Added the `refresh` parameter to the `security.create_service_token` API.
 
 [discrete]
 [[rn-8-3-1]]
