--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-4-0>>
 * <<rn-8-3-3>>
 * <<rn-8-3-2>>
 * <<rn-8-3-1>>
@@ -13,6 +14,26 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-4-0]]
+=== 8.4.0 (2022-08-25)
+
+[discrete]
+==== Search
+
+* Added the `knn` parameter to the `search` API.
+* Added the `knn` parameter to the `async_search.submit` API.
+
+[discrete]
+==== Machine Learning
+
+* Added the `cache_size` parameter to the `ml.start_trained_model_deployment` API.
+
+[discrete]
+==== Security
+
+* Added the `security.update_api_key` API.
 
 [discrete]
 [[rn-8-3-3]]
