--- a/docs/guide/examples.asciidoc
+++ b/docs/guide/examples.asciidoc
@@ -16,7 +16,7 @@ the Python client.
 === Indexing a document
   
 To index a document, you need to specify three pieces of information: `index`, 
-`id`, and a `body`:
+`id`, and a `document`:
 
 [source,py]
 ----------------------------
@@ -79,7 +79,7 @@ for hit in resp['hits']['hits']:
 === Updating a document
 
 To update a document, you need to specify three pieces of information: `index`, 
-`id`, and a `body`:
+`id`, and a `doc`:
 
 [source,py]
 ----------------------------
@@ -93,7 +93,7 @@ doc = {
     'text': 'Interensting modified content...',
     'timestamp': datetime.now(),
 }
-resp = client.update(index="test-index", id=1, document=doc)
+resp = client.update(index="test-index", id=1, doc=doc)
 print(resp['result'])
 ----------------------------
 
