--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-4-2>>
 * <<rn-8-4-1>>
 * <<rn-8-4-0>>
 * <<rn-8-3-3>>
@@ -15,6 +16,26 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-4-2]]
+=== 8.4.2 (2022-09-20)
+
+[discrete]
+==== Documents
+
+* Added the `error_trace`, `filter_path`, `human` and `pretty` parameters to the `get_source` API.
+* Added the `ext` parameter to the `search` API.
+
+[discrete]
+==== Async Search
+
+* Added the `ext` parameter to the `async_search.submit` API.
+
+[discrete]
+==== Fleet
+
+* Added the `ext` parameter to the `fleet.search` API.
 
 [discrete]
 [[rn-8-4-1]]
