--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-4-3>>
 * <<rn-8-4-2>>
 * <<rn-8-4-1>>
 * <<rn-8-4-0>>
@@ -16,6 +17,12 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-4-3]]
+=== 8.4.3 (2022-10-06)
+
+* Client is compatible with Elasticsearch 8.4.3
 
 [discrete]
 [[rn-8-4-2]]
