--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-5-1>>
 * <<rn-8-5-0>>
 * <<rn-8-4-3>>
 * <<rn-8-4-2>>
@@ -18,6 +19,12 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-5-1]]
+=== 8.5.1 (2022-11-21)
+
+* Client is compatible with Elasticsearch 8.5.1
 
 [discrete]
 [[rn-8-5-0]]
