--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-6-0>>
 * <<rn-8-5-3>>
 * <<rn-8-5-2>>
 * <<rn-8-5-1>>
@@ -21,6 +22,29 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-6-0]]
+=== 8.6.0 (2022-01-10)
+
+* Client is compatible with Elasticsearch 8.6.0
+
+[discrete]
+==== Core
+
+* Changed the `fields` parameter of the `field_caps` API to be encoded in the HTTP request body.
+* Changed the `index` parameter of the `rank_eval` API to be optional.
+* Changed the `requests` parameter of the `rank_eval` API to be optional.
+
+[discrete]
+==== CAT
+
+* Added the `time` parameter to the `cat.indices` API
+
+[discrete]
+==== Machine Learning
+
+* Fixed the `model_id` parameter of the `ml.clear_trained_model_deployment_cache` API to be required.
 
 [discrete]
 [[rn-8-5-3]]
