--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-6-2>>
 * <<rn-8-6-1>>
 * <<rn-8-6-0>>
 * <<rn-8-5-3>>
@@ -23,6 +24,12 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-6-2]]
+=== 8.6.2 (2022-02-16)
+
+* Client is compatible with Elasticsearch 8.6.2
 
 [discrete]
 [[rn-8-6-1]]
