--- a/docs/guide/configuration.asciidoc
+++ b/docs/guide/configuration.asciidoc
@@ -62,7 +62,7 @@ import ssl
 # Python 3.6
 es = Elasticsearch(
     ...,
-    ssl_version=ssl.PROTOCOL_TSLv1_2
+    ssl_version=ssl.PROTOCOL_TLSv1_2
 )
 
 # Python 3.7+
