--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-11-0>>
 * <<rn-8-10-1>>
 * <<rn-8-10-0>>
 * <<rn-8-9-0>>
@@ -30,6 +31,14 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-11-0]]
+=== 8.11.0 (2023-11-13)
+
+- Support Python 3.12
+- Added missing `scores` parameter to create trained model vocabulary API
+- Added missing `delete_dest_index` parameter to delete transform API
 
 [discrete]
 [[rn-8-10-1]]
