--- a/docs/guide/migration.asciidoc
+++ b/docs/guide/migration.asciidoc
@@ -167,7 +167,7 @@ with the `security.grant_api_key` API:
 
 [source,python]
 ------------------------------------
-# 8.0+ SUPPORTED USAGES:
+# 8.0+ SUPPORTED USAGE:
 resp = (
     client.options(
         # This is the API key being used for the request
@@ -183,13 +183,36 @@ resp = (
     )
 )
 
-# 7.x DEPRECATED USAGES (Don't do this!):
+# 7.x DEPRECATED USAGE (Don't do this!):
 resp = (
     # This is the API key being used for the request
     client.security.grant_api_key(
         api_key=("request-id", "request-api-key"),
-        # This is the API key being granted
         body={
+            # This is the API key being granted
+            "api_key": {
+                "name": "granted-api-key"
+            },
+            "grant_type": "password",
+            "username": "elastic",
+            "password": "changeme"
+        }
+    )
+)
+------------------------------------
+
+Starting with the 8.12 client, using a body parameter is fully supported again, meaning you can also use `grant_api_key` like this:
+
+[source,python]
+------------------------------------
+# 8.12+ SUPPORTED USAGE:
+resp = (
+    client.options(
+        # This is the API key being used for the request
+        api_key=("request-id", "request-api-key")
+    ).security.grant_api_key(
+        body={
+            # This is the API key being granted
             "api_key": {
                 "name": "granted-api-key"
             },
@@ -295,7 +318,7 @@ from elasticsearch import TransportError, Elasticsearch
 try:
     client.indices.get(index="index-that-does-not-exist")
 
-# In elasticsearch-python v7.x this would capture the resulting
+# In elasticsearch-py v7.x this would capture the resulting
 # 'NotFoundError' that would be raised above. But in 8.0.0 this
 # 'except TransportError' won't capture 'NotFoundError'.
 except TransportError as err:
