Fix interensting typo

--- a/docs/guide/examples.asciidoc
+++ b/docs/guide/examples.asciidoc
@@ -26,7 +26,7 @@ es = Elasticsearch('https://localhost:9200')
 
 doc = {
     'author': 'author_name',
-    'text': 'Interensting content...',
+    'text': 'Interesting content...',
     'timestamp': datetime.now(),
 }
 resp = es.index(index="test-index", id=1, document=doc)
@@ -90,7 +90,7 @@ client = Elasticsearch('https://localhost:9200')
 
 doc = {
     'author': 'author_name',
-    'text': 'Interensting modified content...',
+    'text': 'Interesting modified content...',
     'timestamp': datetime.now(),
 }
 resp = client.update(index="test-index", id=1, doc=doc)
