--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,8 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-12-0>>
+* <<rn-8-11-1>>
 * <<rn-8-11-0>>
 * <<rn-8-10-1>>
 * <<rn-8-10-0>>
@@ -31,6 +33,25 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-12-0]]
+=== 8.11.0 (2023-11-13)
+
+- Dropped support for Python 3.6
+- Added the Inference APIs
+- Added the ES|QL API
+- Added `active_only` parameter to `security.get_api_key` API
+- Added `expiration` parameter to `security.update_api_key` API
+
+[discrete]
+[[rn-8-11-1]]
+=== 8.11.1 (2023-12-08)
+
+- Added missing `role_templates` to `security.put_role_mapping` API
+- Added interactive examples page, to documentation
+- Changed API reference to have one page per sub-client
+
 
 [discrete]
 [[rn-8-11-0]]
