--- a/docs/guide/release-notes.asciidoc
+++ b/docs/guide/release-notes.asciidoc
@@ -1,6 +1,7 @@
 [[release-notes]]
 == Release notes
 
+* <<rn-8-12-0>>
 * <<rn-8-11-1>>
 * <<rn-8-11-0>>
 * <<rn-8-10-1>>
@@ -32,6 +33,17 @@
 * <<rn-8-1-1>>
 * <<rn-8-1-0>>
 * <<rn-8-0-0>>
+
+[discrete]
+[[rn-8-12-0]]
+=== 8.12.0 (2024-01-19)
+
+- Dropped support for Python 3.6
+- Allowed unrestricted `body` parameter again
+- Added the Inference APIs
+- Added the ES|QL API
+- Added `active_only` parameter to `security.get_api_key` API
+- Added `expiration` parameter to `security.update_api_key` API
 
 [discrete]
 [[rn-8-11-1]]
