--- a/docs/guide/installation.asciidoc
+++ b/docs/guide/installation.asciidoc
@@ -1,9 +1,9 @@
 [[installation]]
 == Installation
 
-**[Download the latest version of Elasticsearch](https://www.elastic.co/downloads/elasticsearch)**
+**https://www.elastic.co/downloads/elasticsearch[Download the latest version of Elasticsearch]**
 or
-**[sign-up](https://cloud.elastic.co/registration?elektra=en-ess-sign-up-page)**
+**https://cloud.elastic.co/registration?elektra=en-ess-sign-up-page[sign-up]**
 **for a free trial of Elastic Cloud**.
 
 The Python client for {es} can be installed with pip:
