Apply suggestions from code review
Co-authored-by: Quentin Pradet <quentin.pradet@elastic.co>

--- a/docs/guide/overview.asciidoc
+++ b/docs/guide/overview.asciidoc
@@ -20,7 +20,7 @@ language clients are only backwards compatible with default distributions and
 without guarantees made.
 
 |===
-| Elasticsearch Version | Elasticsearch-py Branch   | Supported
+| Elasticsearch version | elasticsearch-py branch   | Supported
 
 | main                  | main                      | 
 | 8.x                   | 8.x                       | 8.x
