Update getting-started.asciidoc changed API Key tuple
replaced API Key tuple with encoding

--- a/docs/guide/getting-started.asciidoc
+++ b/docs/guide/getting-started.asciidoc
@@ -36,7 +36,7 @@ from elasticsearch import Elasticsearch
 
 client = Elasticsearch(
     "https://...",  # Elasticsearch endpoint
-    api_key=('api-key-id', 'api-key-secret'),  # API key ID and secret
+    api_key='api_key',  # API key encoding
 )
 ----
 
