switching from `model_id` to `inference_id`  as per discussion.

--- a/docs/examples/00fea15cbca83be9d5f1a024ff2ec708.asciidoc
+++ b/docs/examples/00fea15cbca83be9d5f1a024ff2ec708.asciidoc
@@ -4,7 +4,7 @@
 ----
 resp = client.inference.put_model(
     task_type="text_embedding",
-    model_id="my-e5-model",
+    inference_id="my-e5-model",
     body={
         "service": "elasticsearch",
         "service_settings": {
