--- a/docs/examples/46884e00674f82e7a7bc8b418d1777de.asciidoc
+++ b/docs/examples/46884e00674f82e7a7bc8b418d1777de.asciidoc
@@ -5,7 +5,7 @@
 
 resp = client.inference.put_model(
     task_type="text_embedding",
-    model_id="cohere_embeddings",
+    inference_id="cohere_embeddings",
     body={
         "service": "cohere",
         "service_settings": {
