--- a/docs/examples/a4a3c3cd09efa75168dab90105afb2e9.asciidoc
+++ b/docs/examples/a4a3c3cd09efa75168dab90105afb2e9.asciidoc
@@ -4,7 +4,7 @@
 ----
 resp = client.inference.get_model(
     task_type="sparse_embedding",
-    model_id="my-elser-model",
+    inference_id="my-elser-model",
 )
 print(resp)
 ----
