--- a/docs/examples/c0f4cbcb104747f38acdbc9a30bd13bf.asciidoc
+++ b/docs/examples/c0f4cbcb104747f38acdbc9a30bd13bf.asciidoc
@@ -4,7 +4,7 @@
 ----
 resp = client.inference.put_model(
     task_type="text_embedding",
-    model_id="my_openai_embedding_model",
+    inference_id="my_openai_embedding_model",
     body={
         "service": "openai",
         "service_settings": {"api_key": "api_key"},
