--- a/docs/examples/10c3fe2265bb34964bd1005f9da66773.asciidoc
+++ b/docs/examples/10c3fe2265bb34964bd1005f9da66773.asciidoc
@@ -4,7 +4,7 @@
 ----
 resp = client.inference.put_model(
     task_type="text_embedding",
-    model_id="my-msmarco-minilm-model",
+    inference_id="my-msmarco-minilm-model",
     body={
         "service": "elasticsearch",
         "service_settings": {
