--- a/docs/examples/13ecdf99114098c76b050397d9c3d4e6.asciidoc
+++ b/docs/examples/13ecdf99114098c76b050397d9c3d4e6.asciidoc
@@ -4,7 +4,7 @@
 ----
 resp = client.inference.inference(
     task_type="sparse_embedding",
-    model_id="my-elser-model",
+    inference_id="my-elser-model",
     body={
         "input": "The sky above the port was the color of television tuned to a dead channel."
     },
