--- a/docs/examples/4e3414fc712b16311f9e433dd366f49d.asciidoc
+++ b/docs/examples/4e3414fc712b16311f9e433dd366f49d.asciidoc
@@ -4,7 +4,7 @@
 ----
 resp = client.inference.delete_model(
     task_type="sparse_embedding",
-    model_id="my-elser-model",
+    inference_id="my-elser-model",
 )
 print(resp)
 ----
