--- a/docs/examples/4ea91a3ff42de540bb4c9ef268d607a6.asciidoc
+++ b/docs/examples/4ea91a3ff42de540bb4c9ef268d607a6.asciidoc
@@ -4,7 +4,7 @@
 ----
 resp = client.inference.put_model(
     task_type="sparse_embedding",
-    model_id="my-elser-model",
+    inference_id="my-elser-model",
     body={
         "service": "elser",
         "service_settings": {"num_allocations": 1, "num_threads": 1},
