this function didn't work in the test - waiting for feedback if we remove the example or update the spec

--- a/docs/examples/70cc66bf4054ebf0ad4955cb99d9ab80.asciidoc
+++ b/docs/examples/70cc66bf4054ebf0ad4955cb99d9ab80.asciidoc
@@ -2,6 +2,7 @@
 
 [source, python]
 ----
+# @iulia This functionis currently missing in the spec so it doesn't run
 resp = client.ml.update_trained_model_deployment(
     model_id="elastic__distilbert-base-uncased-finetuned-conll03-english",
     body={"number_of_allocations": 4},
